--- a/font.css
+++ b/font.css
@@ -168,9 +168,13 @@ i.icon:before {
 	  margin-right: 10px;
 } 
 
+@media (max-width: 639px) {
+	.image-wrap img {
+		width: 50%;
+	}
+}
 
-
-@media (max-width: 1023px) {
+@media (min-width:640px) and (max-width: 1023px) {
 	.wrapper {
 		height: 80%;
 		min-height: 720px;
