--- a/font.css
+++ b/font.css
@@ -1,10 +1,4 @@
 
-/*------
-
-General
-
-----*/
-
 
 html {
 	background: url(fall-bg.jpg) no-repeat center center fixed; 
@@ -21,28 +15,31 @@ html, body {
 	min-height: 760px;
 }
 
+
 .wrapper {
 	width: 70%;
-	height: 100%;
+	height: 80%;
 	margin: auto;
+	min-height: 720px;
 	max-width: 700px;
-
 }
+
 h1 {
+	font-size: 2.125em;
 	font-family: 'Lato', sans-serif;
 	text-transform: uppercase;
 	font-weight: 900;
 	color: #fff;
-	font-size: 3.125em;
 }
 
 p, span {
 	font-family: 'Roboto Slab', serif;
 	font-weight: lighter;
-	
-	color: #fff;
+		color: #fff;
 }
+
 .box {
+	display:none;
 	width: 100px;/*-- 100px --*/
 	height: 100px; /*-- 100px --*/
 	background-color: #b80914;
@@ -59,6 +56,15 @@ span {
 	font-weight: bold;
 	letter-spacing: 0.888em;
 }
+
+
+
+
+i {
+	margin-bottom: 20px;
+	
+}
+
 
 .footer > span {
 	color: #fff;
@@ -83,39 +89,6 @@ span {
 	margin-bottom: 30px;
 }
 
-/*--------------
-
-Social Links
-
-----------------*/
-
-.social-links-wrapper {
-	margin: 0 auto;
-	padding: 30px 0 0 0;
-	width: 70%;	
-
-}
-
-
-
-
-
-.social-links-wrapper a i> span {
-	letter-spacing: normal;
-}
-
-.social-links-wrapper a {
-	text-decoration: none;
-}
-
-
-i {
-	margin-bottom: 20px;
-	
-}
-
-
-
 
 @font-face {
 	font-family: 'icomoon';
@@ -136,9 +109,8 @@ i {
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
+	margin-right: 15px;
 	display: block;
-
-
 
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
@@ -161,94 +133,70 @@ i {
 	
 }
 
-
-
 i.icon:before {
 	  color: white;
 	  margin-right: 10px;
 } 
 
-@media (max-width: 639px) {
-	.image-wrap img {
-		width: 50%;
-	}
+
+
+.image-wrap img {
+	width: 50%;
 }
 
-@media (min-width:640px) and (max-width: 1023px) {
-	.wrapper {
-		height: 80%;
-		min-height: 720px;
-	}
-	
-	.box {
-		display:none; }
+/*SOCIAL LINK*/
 
-	h1 {
-		font-size: 2.125em;
-	}
+.social-links-wrapper {
+	width: 100%;
+	height: 20%;
+	text-align: center;
+	padding: 0;
+	padding-top: 15px;
 
-	.social-links-wrapper {
-		width: 100%;
-		height: 20%;
-
-		text-align: center;
-		padding: 0;
-		padding-top: 15px;
-	
-	}
+}
 
 
-	.social-links-wrapper a {
-		padding-bottom: 15px;
-		border-bottom: solid white 1px;
-	}
-	
-
-	i.icon {font-size: 1.5em;
-	margin: 0;
+.social-links-wrapper a {
 	padding-bottom: 15px;
 	border-bottom: solid white 1px;
+	text-decoration: none;
+}
 
-	}
 
-	.icon-pinterest,
-	.icon-behance {
-		padding-top: 15px;
-	}
+i.icon {font-size: 1.5em;
+margin: 0;
+padding-bottom: 15px;
+border-bottom: solid white 1px;
 
-	i.icon-behance {
-		border: none;
+}
+
+.icon-pinterest,
+.icon-behance {
+	padding-top: 15px;
+}
+
+i.icon-behance {
+	border: none;
+}
+
+.social-links-wrapper a i> span {
+	letter-spacing: normal;
+}
+
+@media (min-width: 580px) {
+	.image-wrap img  {
+		width: inherit;
 	}
 }
- 
- 
 
-@media (min-width:1024px) and (max-width: 1278px){
+@media (min-width: 768px) and (max-width: 860px){
 	
-	.wrapper {
-		height: 70%;
+	
+	.box {
+		display: inherit;
 	}
-
-	.wrapper .content-wrap{
-		
-		height: 70%;
-		margin: auto;
-	}
-
-	.social-links-wrapper {
-		height: 30%;
-	}
-	[class^="icon-"], [class*=" icon-"] {
-		display: inline !important;
-		margin-right: 15px;
-	}
-
-		
-	.image-wrap {
-		width: 100%;
-		text-align: center;
 
 }
 
-
+@media (min-width: 861x) and (max-width: 1024px){}
 
