--- a/font.css
+++ b/font.css
@@ -15,7 +15,9 @@ html, body {
 	min-height: 760px;
 }
 
-
+a {
+	text-decoration: none;
+}
 .wrapper {
 	width: 70%;
 	height: 80%;
@@ -58,31 +60,20 @@ span {
 }
 
 
-
-
-i {
-	margin-bottom: 20px;
-	
-}
-
-
 .footer > span {
 	color: #fff;
-	font-size: 2em;
-	width: 100%;
+	font-size: 1.5em;
+	width: 70%;
+	margin: auto;
 	letter-spacing: inherit;
 	display: block;
-
 }
 
 .footer {
 	width: 100%;
-	height: 20%;
-	margin: 0 auto;
-	padding-top: 30px;
+	height: 35%;
+	padding-top: 40px;
 	background-color: #333;
-	
-
 }
 
 .wrapper div p {
@@ -128,7 +119,7 @@ i {
 }
 
 .icon-behance:before {
-	font-size: 1.2em;
+	font-size: 1.1em;
 	content: "\e605";
 	
 }
@@ -136,6 +127,7 @@ i {
 i.icon:before {
 	  color: white;
 	  margin-right: 10px;
+	  margin-left: 20%;
 } 
 
 
@@ -148,40 +140,48 @@ i.icon:before {
 
 .social-links-wrapper {
 	width: 100%;
-	height: 20%;
-	text-align: center;
 	padding: 0;
 	padding-top: 15px;
-
 }
 
+.social-links-wrapper ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
 
-.social-links-wrapper a {
-	padding-bottom: 15px;
+.social-links-wrapper li {
 	border-bottom: solid white 1px;
-	text-decoration: none;
 }
 
-
-i.icon {font-size: 1.5em;
-margin: 0;
-padding-bottom: 15px;
-border-bottom: solid white 1px;
-
+.social-links-wrapper ul li:last-child {
+	border: none;
 }
+
+i.icon {
+	font-size: 1.5em;
+		padding-bottom: 15px;
+	width: 70%;
+}
+
 
 .icon-pinterest,
 .icon-behance {
 	padding-top: 15px;
 }
 
-i.icon-behance {
-	border: none;
-}
 
 .social-links-wrapper a i> span {
 	letter-spacing: normal;
 }
+
+
+
+
+
+/*MEDIA QUERIES */
+
+
 
 @media (min-width: 580px) {
 	.image-wrap img  {
@@ -189,12 +189,50 @@ i.icon-behance {
 	}
 }
 
-@media (min-width: 768px) and (max-width: 860px){
-	
-	
+@media (min-width: 768px) {
+	.wrapper {
+		height: 60%;
+	}
+
 	.box {
 		display: inherit;
 	}
+
+	.social-links-wrapper {
+		height: 40%;
+		width: 70%;
+		margin: auto;
+		max-width: 700px;
+		padding: 0;
+	}
+
+	.social-links-wrapper li {
+		border: none;
+		display: inline-block;
+		width: 31.47321%; /*169.2px*/ /*768*70%=537.6px*/
+	}
+
+	i.icon:before { margin-left: 0;}
+	i.icon.icon-facebook { padding-top:15px;}
+
+
+}
+
+@media (min-width: 1024px) {
+	h1 {
+		font-weight: 900;
+		font-size: 3.125em;
+	}
+
+}
+
+
+@media (min-width: 768px) and (max-width: 860px){
+	.box {
+		display: inherit;
+	}
+	
+
 
 }
 
