--- a/font.css
+++ b/font.css
@@ -22,7 +22,7 @@ a {
 	width: 70%;
 	height: 80%;
 	margin: auto;
-	min-height: 720px;
+	min-height: 480px;
 	max-width: 700px;
 }
 
@@ -181,6 +181,8 @@ i.icon {
 
 /*MEDIA QUERIES */
 
+
+}
 
 
 @media (min-width: 580px) {
